# frameopt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
bench/: quick_benchmark.py
configs/inputs/: comp.yaml  quick.yaml  rare.yaml  test_tr.yaml
configs/models/cg/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  quick.yaml  quick_mellow.yaml  quick_pnorm.yaml
configs/models/cg_pramp/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  long.yaml  quick.yaml
configs/models/cg_pramp_restart/: comp_mellow.yaml  comp_pnorm.yaml
configs/models/projection/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  quick.yaml  quick_mellow.yaml  quick_pnorm.yaml
configs/models/projection_cg/: comp.yaml
configs/models/projection_pramp/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  comp_pnormshifted.yaml  long.yaml  long_mellow.yaml  long_pnorm.yaml  xlong.yaml  xlong_mellow.yaml  xlong_pnorm.yaml
configs/models/projection_pramp_restart/: comp_mellow.yaml  comp_pnorm.yaml  long_mellow.yaml  long_pnorm.yaml  xlong_mellow.yaml  xlong_pnorm.yaml
configs/models/projection_restart/: comp_pnorm.yaml
configs/models/riemannian/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  quick.yaml  quick_mellow.yaml  quick_pnorm.yaml
configs/models/riemannian_pramp/: comp.yaml  comp_mellow.yaml  comp_pnorm.yaml  long.yaml  long_mellow.yaml  long_pnorm.yaml  xlong.yaml  xlong_mellow.yaml  xlong_pnorm.yaml
configs/models/riemannian_pramp_restart/: comp_mellow.yaml  comp_pnorm.yaml  long_mellow.yaml  long_pnorm.yaml  xlong_mellow.yaml  xlong_pnorm.yaml
configs/models/riemannian_restart/: comp_mellow.yaml  comp_pnorm.yaml
configs/models/tr/: comp_mellow.yaml
configs/models/tr_pramp/: comp_mellow.yaml  comp_pnorm.yaml  long_mellow.yaml  long_pnorm.yaml
configs/models/tr_pramp_restart/: comp_mellow.yaml  comp_pnorm.yaml  long_mellow.yaml  long_pnorm.yaml
examples/: run_cma_conjgrad.py  run_cma_projection.py
models/: api.py  cg.py  cg_pramp.py  cg_pramp_restart.py  projection.py  projection_cg.py  projection_pramp.py  projection_pramp_restart.py  projection_restart.py  riemannian.py  riemannian_pramp.py  riemannian_pramp_restart.py  riemannian_restart.py  tr.py  tr_pramp.py  tr_pramp_restart.py
scripts/: _utils.py
scripts/bench/: cg_cma_comparison  cg_cma_comparison.py  cma_ramp_config.json  cma_ramp_driver.py  energy_profile.py  interleaved_cg_bench_driver.py  quick_benchmark.py  quick_energy_benchmark.py  restarted_cg_driver.py  run_model.py
scripts/cli/: coherence_from_txt.py  run_cg.py  run_cg_ramp.py  run_cma.py  run_cma_cg.py  run_cma_cg_restart.py  run_cma_ramp.py  run_cma_restart.py  verify_frame.py
scripts/examples/: cma_projection.py  cma_riemannian.py  run_cma_projection.py
scripts/experiments/: cma_ramp_config.json  cma_ramp_driver.py  run_cg_ramp.py
src/evomof/: __init__.py  bounds.py
src/evomof/core/: _types.py  energy.py  frame.py  manifold.py
src/evomof/optim/: manifold.py
src/evomof/optim/cma/: __init__.py  projection.py  riemannian.py  utils.py
src/evomof/optim/conjgrad/: __init__.py  polish.py
src/evomof/optim/local/: __init__.py  cg.py
src/evomof/optim/utils/: p_scheduler.py
src/frameopt/: __init__.py  bounds.py
src/frameopt/core/: _types.py  energy.py  frame.py  manifold.py
src/frameopt/model/: api.py  p_scheduler.py  utils.py
src/frameopt/models/: api.py  utils.py
src/frameopt/optim/cma/: __init__.py  projection.py  riemannian.py  utils.py
src/frameopt/optim/local/: __init__.py  _pymanopt_adapters.py  cg.py  tr.py
src/frameopt/optim/utils/: p_scheduler.py
tests/: test_bounds.py  test_cg_smoke.py  test_chart.py  test_cma_smoke.py  test_conjgrad_smoke.py  test_energy.py  test_frame.py  test_frame_io.py  test_grad.py  test_grad_finite_diff.py  test_manifold.py  test_p_scheduler.py  test_pcma_smoke.py  test_rcma_smoke.py  test_smoke.py  test_tr_smoke.py
