[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evomof"
version = "0.1.0"
description = "Evolutionary optimisation of Grassmannian frames"
authors = [
    { name = "Juan Román Roche", email = "jroman@unizar.es" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "cma>=3.2.0",
    "pymanopt>=0.4",
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]
suite = [
    "mpmath",
    "pyyaml",
    "types-PyYAML",
    "dask[distributed]>=2025.7.0",
    "pandas",
    "matplotlib",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PERF"]
ignore = ["E501"]  # line length

[tool.ruff.lint.isort]
known-first-party = ["evomof"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "cma.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymanopt.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:Could not import matplotlib\\.pyplot.*:UserWarning:cma\\.s",
]

[tool.hatch.envs.default]
path = ".venv"
features = ["dev", "suite"]

[tool.hatch.envs.default.scripts]
lint = "ruff check src tests scripts models && black --check src tests scripts models"
test = "pytest -q"
typecheck = "mypy src/evomof models"
bench = "python scripts/bench/quick_energy_benchmark.py"
all = "hatch run lint ; hatch run typecheck ; hatch run test ; hatch run bench"


